# RAIL-group-software

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh
modules/: conftest.py  requirements.txt  setup.cfg
modules/common/: setup.py
modules/common/common/: __init__.py
modules/common/tests/: test_common_pose.py
modules/environments/: README.md  setup.py
modules/environments/environments/: __init__.py  base_generator.py  clutter_generator.py  constants.py  generate.py  guided_maze.py  office.py  office2.py  pickle_loader.py  simulated.py  world.py
modules/environments/tests/: test_office2_environment_gen.py  test_office_environment_gen.py  test_simulator_speed.py
modules/example/: Makefile.mk  README.org  setup.py
modules/example/example/: __init__.py  core.py
modules/example/tests/: test_example.py
modules/gridmap/: README.md  setup.py
modules/gridmap/gridmap/: __init__.py  laser.py  mapping.py  planning.py  utils.py
modules/gridmap/tests/: test_gridmap.py
modules/learning/: README.md  setup.py
modules/learning/learning/: __init__.py  data.py  logging.py
modules/learning/tests/: test_learning_data.py
modules/lsp/: Makefile.mk  README.org  setup.py
modules/lsp/lsp/: __init__.py  constants.py  core.py  pose.py  primitive.py  robot.py  simulators.py
modules/lsp/tests/: test_lsp_accel.py  test_lsp_evaluate.py  test_lsp_utils.py
modules/lsp_accel/: CMakeLists.txt  README.org  setup.py
modules/lsp_accel/src/: main.cpp  subgoal_planning.hpp
modules/lsp_gnn/: Makefile.mk  README.org  setup.py
modules/lsp_gnn/lsp_gnn/: __init__.py  core.py  planners.py  plotting.py  utils.py
modules/lsp_gnn/scratch/: Makefile.mk  info_planner.py  info_util.py  plotting.py  test_lsp_cond_plotting.py  utils.py
modules/lsp_gnn/tests/: test_j_env.py  test_lsp_gnn_planners.py  test_parallel_env.py
modules/lsp_select/: Makefile.mk  README.md  setup.py
modules/lsp_select/lsp_select/: __init__.py  offline_replay.py
modules/lsp_select/tests/: conftest.py  test_lsp_cyclegan.py  test_maze_navigation.py  test_offline_replay.py
modules/lsp_xai/: Makefile.mk  README.md  setup.py
modules/lsp_xai/lsp_xai/: __init__.py
modules/lsp_xai/tests/: conftest.py  test_lsp_xai.py
modules/mrlsp/: Makefile.mk  README.md  setup.py
modules/mrlsp/mrlsp/: __init__.py  core.py  pouct.py
modules/mrlsp/tests/: dummy_frontier.py  test_core_utility_functions.py  test_cpp_state_constructor.py  test_more_robots_frontiers.py  (+3 more)
modules/mrlsp_accel/: CMakeLists.txt  README.md  setup.py
modules/unitybridge/: setup.py
modules/vertexnav/: Makefile.mk  README.org  setup.py
modules/vertexnav_accel/: CMakeLists.txt  README.org  setup.py
modules/vertexnav_accel/src/: cgal_ex.cpp  cgal_ex.hpp  main.cpp  noisy.cpp  noisy.hpp  pose.cpp  pose.hpp  types.hpp  vertex_graph.cpp  vertex_graph.hpp
modules/vertexnav_accel/tests/: test_gapnav_accel.py
resources/notebooks/: RAIL-onboarding-01-known-space-navigation.ipynb  RAIL-onboarding-02-visual-simulator.ipynb  environments-playground.ipynb
resources/testing/: lsp_xai_maze_0SG.ExpNavVisLSP.pt  lsp_xai_maze_4SG.ExpNavVisLSP.pt
(+143 files in other folders)
